@@ -1,5 +1,17 @@
 2012-10-04  Jocelyn Turcotte  <jocelyn.turcotte@digia.com>
 
+        [Qt] Apply QQuickWebViewExperimental::devicePixelRatio to the desktop mode as well
+        https://bugs.webkit.org/show_bug.cgi?id=98428
+
+        Reviewed by Kenneth Rohde Christiansen.
+
+        This is handled by the PageViewportController when in flickable mode.
+
+        * UIProcess/API/qt/qquickwebview.cpp:
+        (QQuickWebViewLegacyPrivate::updateViewportSize):
+
+2012-10-04  Jocelyn Turcotte  <jocelyn.turcotte@digia.com>
+
         [Qt] Prevent the PageViewportController from affecting the viewport in desktop mode
         https://bugs.webkit.org/show_bug.cgi?id=98427
 
